--- a/src/assets/scssAdmin/_contact-admin.scss
+++ b/src/assets/scssAdmin/_contact-admin.scss
@@ -63,8 +63,9 @@ text-transform: uppercase;
     font-style: italic;
     align-self: center;
     padding: 0;
-    width: 50%;
+    // width: 50%;
     padding: .25em 0 ;
+    text-align: center;
 
 }
 .customer__email{
