--- a/src/assets/scssAdmin/_contact-admin.scss
+++ b/src/assets/scssAdmin/_contact-admin.scss
@@ -21,12 +21,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
+flex-wrap: wrap;
 }
 
 .contact_card__admin{
     padding: 1.5em 0;
-    width: 86%;
+    width: 46%;
     // height: 230px;
     // background-color: red;
     border-radius: 20px;
