--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -210,8 +210,7 @@ h1 {
   }
 }
 
-.accountToggle {
-  background-image: url("../img/account.svg");
+.accountToggle, .contactToggle {
   background-size: cover;
   background-repeat: no-repeat;
   width: 50px;
@@ -220,10 +219,18 @@ h1 {
 }
 
 @media (max-width: 650px) {
-  .accountToggle {
+  .accountToggle, .contactToggle {
     width: 25px;
     height: 25px;
   }
+}
+
+.accountToggle {
+  background-image: url("../img/account.svg");
+}
+
+.contactToggle {
+  background-image: url("../img/phone-book.svg");
 }
 
 .header__extralinks {
