--- a/src/assets/scssAdmin/_products.scss
+++ b/src/assets/scssAdmin/_products.scss
@@ -46,7 +46,7 @@
     height: 70px;
     // background-color: $blue;
     &:hover{
-      background-color: $dark-grey;
+      // background-color: $dark-grey;
     }
     &:focus,
     &:active {
@@ -60,7 +60,8 @@
   border-bottom: 5px solid $dark-grey;
   border-top: 5px solid $dark-grey;
   width: 86%;
-  height: 230px;
+  // height: 230px;
+  padding: 2em 0;
   border-radius: 20px;
   background-color: #fff;
   // border: red solid 3px;
@@ -82,31 +83,34 @@
   font-size: 1.45em;
 }
 .product__title_admin {
-  align-self: flex-start;
-  font-size: 3em;
+  font-size: 2em;
   width: 250px;
   text-transform: uppercase;
+  text-align: center;
+  margin: auto 0 auto 20px;
+  font-weight: bold;
 }
 .product__middle {
   display: flex;
   align-items: center;
-  width: 500px;
+  width: 50%;
   flex-grow: 2;
   justify-content: space-around;
 }
 .product__img_admin {
   height: 150px;
-  width: auto;
-  //   justify-self: flex-start;
+  width: 150px;
+
 }
 .product__description_admin {
   width: 60%;
-  font-size: 1.75em;
+  font-size: 1.65em;
   text-align: center;
 }
 .product__price_admin {
-  font-size: 5em;
+  font-size: 3em;
   margin-right: 30px;
+  font-weight: bold;
 }
 
 .product__controls_admin {
@@ -119,8 +123,9 @@
     // color: #fff;
     border-radius: 20px;
     padding: 5px 0;
-    margin: 5px 0;
+    margin: .75em 0;
     text-transform: uppercase;
+    display: block;
   }
   .product__edit_button {
     background-color: $green;
