--- a/src/assets/scssAdmin/_products.scss
+++ b/src/assets/scssAdmin/_products.scss
@@ -21,11 +21,8 @@
   align-items: center;
 }
 .products__header_admin {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: sticky;
-  width: 50%;
+  // display: flex;
+  width: 24%;
   padding: 20px 0;
 }
 
