--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -170,12 +170,6 @@ h1 {
   background-color: white;
 }
 
-@media (max-width: 650px) {
-  .header {
-    height: 10vh;
-  }
-}
-
 .header__name {
   font-family: "Libre Barcode 128 Text", cursive;
   font-size: 5em;
@@ -257,6 +251,12 @@ h1 {
           align-items: center;
 }
 
+@media (max-width: 999px) {
+  .header__extralinks {
+    display: none;
+  }
+}
+
 .header__extralinks a,
 .header__extralinks li {
   text-decoration: none;
@@ -269,35 +269,53 @@ h1 {
   color: #a14617;
 }
 
-@media (max-width: 375px) {
-  .header__extralinks {
-    font-size: 1em;
-    justify-self: flex-end;
-  }
-  .header__extralinks a,
-  .header__extralinks li {
-    margin-left: auto;
-    padding-bottom: 1em;
-  }
-}
-
-@media (max-width: 650px) {
-  .header__extralinks {
-    font-size: 1em;
-    display: inline-block;
-  }
-  .header__extralinks a,
-  .header__extralinks li {
-    padding-bottom: 1em;
-  }
-}
-
 .activeLink {
   color: #a14617;
 }
 
 .activeLink:hover {
   color: #68ccfd;
+}
+
+.menu__icon {
+  background-image: url("../img/menuicon.svg");
+  display: none;
+  width: 75px;
+  height: 75px;
+  background-size: cover;
+}
+
+@media (max-width: 999px) {
+  .menu__icon {
+    display: block;
+  }
+}
+
+.header__hidden_links {
+  display: none;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  font-family: "Kosugi", sans-serif;
+  font-size: 2em;
+  font-weight: bold;
+  text-transform: uppercase;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header__overlay {
+  width: 100vw;
+  height: 100vh;
+  display: none;
+  background-color: red;
+  z-index: 100;
+  position: fixed;
+  top: 0;
 }
 
 .index {
