--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -11,10 +11,10 @@
   right: 0;
   z-index: 3;
   background-color: white;
-  @media (max-width: $iphonemedia) {
-    height: 10vh;
-    // padding: 10% 0;
-  }
+  // @media (max-width: $iphonemedia) {
+  //   height: 10vh;
+  //   // padding: 10% 0;
+  // }
 }
 
 .header__name {
@@ -65,6 +65,9 @@ margin-top: 5px;
 
 }
 .header__extralinks {
+  @media (max-width: $menuiconbreakpoint) {
+    display: none;
+  }
   display: flex;
   justify-content: flex-end;
   flex-grow: 1;
@@ -83,23 +86,23 @@ margin-top: 5px;
       color: $browngold;
     }
   }
-  @media (max-width: $smallphonemedia) {
-    font-size: 1em;
-    justify-self: flex-end;
-    a,
-    li {
-      margin-left: auto;
-      padding-bottom: 1em;
-    }
-  }
-  @media (max-width: $iphonemedia) {
-    font-size: 1em;
-    display: inline-block;
-    a,
-    li {
-      padding-bottom: 1em;
-    }
-  }
+  // @media (max-width: $smallphonemedia) {
+  //   font-size: 1em;
+  //   justify-self: flex-end;
+  //   a,
+  //   li {
+  //     margin-left: auto;
+  //     padding-bottom: 1em;
+  //   }
+  // }
+  // @media (max-width: $iphonemedia) {
+  //   font-size: 1em;
+  //   display: inline-block;
+  //   a,
+  //   li {
+  //     padding-bottom: 1em;
+  //   }
+  // }
 }
 
 .activeLink {
@@ -107,4 +110,38 @@ margin-top: 5px;
   &:hover {
     color: $babyblue;
   }
+}
+
+.menu__icon{
+  @media (max-width: $menuiconbreakpoint) {
+    display: block;
+  }
+  background-image: url('../img/menuicon.svg');
+  display: none;
+  width: 75px;
+  height: 75px;
+  background-size: cover;
+}
+.header__hidden_links{
+  display: none;
+  // display: flex;
+  justify-content: flex-end;
+  flex-grow: 1;
+
+  font-family: $bodyfont;
+  font-size: 2em;
+  font-weight: bold;
+  text-transform: uppercase;
+  align-items: center;
+}
+
+.header__overlay{
+  width: 100vw;
+  height: 100vh;
+  display: none;
+  background-color: red;
+  z-index: 100;
+  position: fixed;
+  top: 0;
+
 }
