fixed goat/ram icon and centered it properly

--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -33,14 +33,19 @@
 
 .header__icon {
   background-image: url("../img/goaticon.svg");
+  position: absolute;
+  // top: 6.5vh;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background-size: cover;
   background-repeat: no-repeat;
   height: 100px;
   width: 100px;
   flex-grow: 2;
   @media (max-width: $iphonemedia) {
-    background-size: 50%;
-    margin-top: 50%;
+    height: 60px;
+    width: 60px;
+
   }
 } //GOAT ICON FOR NAV BAR
 .accountToggle, .contactToggle{
