--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -192,6 +192,10 @@ h1 {
 
 .header__icon {
   background-image: url("../img/goaticon.svg");
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   background-size: cover;
   background-repeat: no-repeat;
   height: 100px;
@@ -203,8 +207,8 @@ h1 {
 
 @media (max-width: 650px) {
   .header__icon {
-    background-size: 50%;
-    margin-top: 50%;
+    height: 60px;
+    width: 60px;
   }
 }
 
