fixed width on header links

--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -75,7 +75,8 @@ margin-top: 5px;
   }
   display: flex;
   justify-content: flex-end;
-  flex-grow: 1;
+  flex-grow: 1.5;
+  // width: 70%;
 
   font-family: $bodyfont;
   font-size: 2em;
