--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -45,7 +45,6 @@
   @media (max-width: $iphonemedia) {
     height: 60px;
     width: 60px;
-
   }
 } //GOAT ICON FOR NAV BAR
 .accountToggle, .contactToggle{
@@ -124,30 +123,59 @@ margin-top: 5px;
   }
   background-image: url('../img/menuicon.svg');
   display: none;
-  width: 75px;
-  height: 75px;
+  width: 65px;
+  height: 65px;
   background-size: cover;
-}
-.header__hidden_links{
-  display: none;
-  // display: flex;
-  justify-content: flex-end;
-  flex-grow: 1;
 
-  font-family: $bodyfont;
-  font-size: 2em;
-  font-weight: bold;
-  text-transform: uppercase;
-  align-items: center;
+z-index: 5;
+position: absolute;
+right: 2em;
+top:2em;
 }
 
-.header__overlay{
-  width: 100vw;
+.hidden__nav{
   height: 100vh;
-  display: none;
-  background-color: red;
-  z-index: 100;
+  width: 100vw;
+  background-color: $babyblue;
   position: fixed;
   top: 0;
-
+  z-index: 5;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+color: white;
+&:focus{
+  color: white !important;
 }
+}
+.header__hidden_links{
+  // display: none;
+  display: flex;
+  flex-direction: column;
+  // justify-content: flex-end;
+  justify-content: space-around;
+  // flex-grow: 1;
+height: 300px;
+
+// margin-top: 23vh;
+  font-family: $bodyfont;
+  font-size: 3.5em;
+  font-weight: bold;
+  text-transform: uppercase;
+  // align-items: center;
+  a{
+    text-decoration: none;
+  }
+}
+
+// .header__overlay{
+//   width: 100vw;
+//   height: 100vh;
+//   display: none;
+//   background-color: red;
+//   z-index: 100;
+//   position: fixed;
+//   top: 0;
+
+// }
