--- a/src/assets/scss/_extrastyles.scss
+++ b/src/assets/scss/_extrastyles.scss
@@ -1,28 +1,21 @@
 .header__auth{
-    // font-size: ;
     font-size: 1em;
     border-bottom: none;
-    // border: 2px solid $babyblue;
-    // height: 100%;
-    width: 100%;
+    width: inherit;
     padding: 0;
     order: -1;
+    width: 119px;
     align-self: center;
     text-align: center;
-
     &:hover{
         cursor: pointer;
     }
+}
+.hidden{
+    width: inherit;
 }
 
 .auth0{
     display: flex;
     padding-right: 1em;
-    // flex-direction: column;
-
-  }
-  .contactToggle{
-       margin-top: .5em !important;
-
-
   }
