--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -11,11 +11,7 @@
   right: 0;
   z-index: 3;
   background-color: white;
-  // @media (max-width: $iphonemedia) {
-  //   height: 10vh;
-  //   // padding: 10% 0;
-  // }
-}
+};
 
 .header__name {
   font-family: "Libre Barcode 128 Text", cursive;
@@ -28,8 +24,8 @@
   @media (max-width: $iphonemedia) {
     font-size: 2em;
     flex-grow: 1;
-  }
-}
+  };
+};
 
 .header__icon {
   background-image: url("../img/goaticon.svg");
@@ -45,8 +41,8 @@
   @media (max-width: $iphonemedia) {
     height: 60px;
     width: 60px;
-  }
-} //GOAT ICON FOR NAV BAR
+  };
+}; //GOAT ICON FOR NAV BAR
 .accountToggle, .contactToggle{
   background-size: cover;
    background-repeat: no-repeat;
@@ -56,22 +52,22 @@
    @media (max-width: $iphonemedia) {
     width: 25px;
     height: 25px;
-}
+};
 
-}
+};
 .accountToggle{
 
   background-image: url('../img/account.svg');
- }
+ };
 .contactToggle{
 background-image: url('../img/phone-book.svg');
 margin-top: 5px;
 
-}
+};
 .header__extralinks {
   @media (max-width: $menuiconbreakpoint) {
     display: none;
-  }
+  };
   display: flex;
   justify-content: flex-end;
   flex-grow: 1.5;
@@ -89,49 +85,30 @@ margin-top: 5px;
     margin: 0 2%;
     &:hover {
       color: $browngold;
-    }
-  }
-  // @media (max-width: $smallphonemedia) {
-  //   font-size: 1em;
-  //   justify-self: flex-end;
-  //   a,
-  //   li {
-  //     margin-left: auto;
-  //     padding-bottom: 1em;
-  //   }
-  // }
-  // @media (max-width: $iphonemedia) {
-  //   font-size: 1em;
-  //   display: inline-block;
-  //   a,
-  //   li {
-  //     padding-bottom: 1em;
-  //   }
-  // }
-}
+    };
+  };
+};
 
 .activeLink {
   color: $browngold;
   &:hover {
     color: $babyblue;
-  }
-}
-
+  };
+};
 .menu__icon{
   @media (max-width: $menuiconbreakpoint) {
     display: block;
-  }
+  };
   background-image: url('../img/menuicon.svg');
   display: none;
   width: 65px;
   height: 65px;
   background-size: cover;
-
 z-index: 5;
-position: absolute;
+position: fixed;
 right: 2em;
-top:2em;
-}
+top:2.1em;
+};
 
 .hidden__nav{
   height: 100vh;
@@ -147,35 +124,18 @@ top:2em;
 color: white;
 &:focus{
   color: white !important;
-}
-}
+};
+};
 .header__hidden_links{
-  // display: none;
   display: flex;
   flex-direction: column;
-  // justify-content: flex-end;
   justify-content: space-around;
-  // flex-grow: 1;
-height: 300px;
-
-// margin-top: 23vh;
+height: 400px;
   font-family: $bodyfont;
   font-size: 3.5em;
   font-weight: bold;
   text-transform: uppercase;
-  // align-items: center;
   a{
     text-decoration: none;
-  }
-}
-
-// .header__overlay{
-//   width: 100vw;
-//   height: 100vh;
-//   display: none;
-//   background-color: red;
-//   z-index: 100;
-//   position: fixed;
-//   top: 0;
-
-// }
+  };
+};
