--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -49,7 +49,7 @@
 };
 .footer__socialmedia {
   margin-top: 5%;
-  display: inline-block;
+  display: flex;
   a {
     padding: 5px 10px;
     color: white;
@@ -82,6 +82,7 @@
 };
 .footer__payment_options {
   position: absolute;
+  display: flex;
   right: 2%;
   a {
     padding: 0 10px;
