--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -58,8 +58,7 @@
 
   input,
   textarea {
-    height: 75px;
-    width: 100%;
+    @include dimensions(75px, 100%);
     border: none;
     border-bottom: 2px solid #eee;
     font-size: 2em;
