--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -5,8 +5,7 @@
   align-content: center;
   padding: 10px 0;
   position: fixed;
-  width: 100%;
-  height: 13vh;
+  @include dimensions (13vh, 100%);
   top: 0;
   right: 0;
   z-index: 3;
@@ -20,7 +19,6 @@
   color: $babyblue;
   text-decoration: none;
   margin-left: 16px;
-
   @media (max-width: $iphonemedia) {
     font-size: 2em;
     flex-grow: 1;
@@ -35,28 +33,23 @@
   transform: translate(-50%, -50%);
   background-size: cover;
   background-repeat: no-repeat;
-  height: 100px;
-  width: 100px;
+  @include dimensions(100px, 100px);
   flex-grow: 2;
   @media (max-width: $iphonemedia) {
-    height: 60px;
-    width: 60px;
+    @include dimensions(60px, 60px);
   };
 }; //GOAT ICON FOR NAV BAR
 .accountToggle, .contactToggle{
   background-size: cover;
    background-repeat: no-repeat;
-   width: 50px;
-   height: 50px;
+   @include dimensions(50px, 50px);
    display: block;
    @media (max-width: $iphonemedia) {
-    width: 25px;
-    height: 25px;
+    @include dimensions(25px, 25px)
 };
 
 };
 .accountToggle{
-
   background-image: url('../img/account.svg');
  };
 .contactToggle{
@@ -71,8 +64,6 @@ margin-top: 5px;
   display: flex;
   justify-content: flex-end;
   flex-grow: 1.5;
-  // width: 70%;
-
   font-family: $bodyfont;
   font-size: 2em;
   font-weight: bold;
@@ -101,8 +92,7 @@ margin-top: 5px;
   };
   background-image: url('../img/menuicon.svg');
   display: none;
-  width: 65px;
-  height: 65px;
+  @include dimensions(65px, 65px);
   background-size: cover;
 z-index: 5;
 position: fixed;
@@ -111,8 +101,7 @@ top:2.1em;
 };
 
 .hidden__nav{
-  height: 100vh;
-  width: 100vw;
+  @include dimensions(100vh, 100vw);
   background-color: $babyblue;
   position: fixed;
   top: 0;
