--- a/src/assets/scss/_products.scss
+++ b/src/assets/scss/_products.scss
@@ -17,15 +17,13 @@
 .products__form {
   margin: 0 1%;
   select {
-    width: 200px;
-    height: 3em;
+    @include dimensions(3em, 200px);
     border: none;
     border-bottom: 5px solid $babyblue;
     font-size: 1.25em;
     @media (max-width: $iphonemedia) {
-      width: 100px;
-      height: 1.5em;
       margin: 0 1em;
+      @include dimensions(1.5em, 100px);
     }
   }
 }
@@ -60,8 +58,7 @@
   font-family: $bodyfont;
 }
 .product__img {
-  width: 100%;
-  height: 100%;
+  @include dimensions(100%, 100%);
   &:hover {
     animation: moveUp 3s ease;
   }
@@ -131,8 +128,7 @@ button {
   background-repeat: no-repeat;
   background-size: 3em;
   z-index: -1;
-  height: 3em;
-  width: 3em;
+  @include dimensions(3em, 3em);
   position: absolute;
   transform: skew(20deg);
   transform: rotate(-20deg);
